sieve typesafe querying before extracting to packages
