# server/api/openapi-with-docs.json
@@ -7,81 +7,11 @@
   },
   "paths": {
     "/GetAuthors": {
-      "post": {
+      "get": {
         "tags": [
           "Library"
         ],
         "operationId": "Library_GetAuthors",
-        "requestBody": {
-          "x-name": "dto",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GetAuthorsRequestDto"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Author"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/GetAuthorsSieve": {
-      "post": {
-        "tags": [
-          "Library"
-        ],
-        "operationId": "Library_GetAuthorsSieve",
-        "requestBody": {
-          "x-name": "dto",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GetAuthorsSieveRequestDto"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Author"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/GetAuthorsSieveBasic": {
-      "post": {
-        "tags": [
-          "Library"
-        ],
-        "operationId": "Library_GetAuthorsSieveBasic",
         "parameters": [
           {
             "name": "Filters",
@@ -143,35 +73,56 @@
         }
       }
     },
-    "/GetAuthorDtos": {
-      "get": {
-        "tags": [
-          "Library"
-        ],
-        "operationId": "Library_GetAuthorDtos",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/AuthorDto"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/GetBooks": {
       "get": {
         "tags": [
           "Library"
         ],
         "operationId": "Library_GetBooks",
+        "parameters": [
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          },
+          {
+            "name": "Sorts",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 2
+          },
+          {
+            "name": "Page",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "maximum": 2147483647.0,
+              "minimum": 1.0,
+              "nullable": true
+            },
+            "x-position": 3
+          },
+          {
+            "name": "PageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "maximum": 2147483647.0,
+              "minimum": 1.0,
+              "nullable": true
+            },
+            "x-position": 4
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -180,7 +131,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/BookDto"
+                    "$ref": "#/components/schemas/Book"
                   }
                 }
               }
@@ -195,6 +146,50 @@
           "Library"
         ],
         "operationId": "Library_GetGenres",
+        "parameters": [
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          },
+          {
+            "name": "Sorts",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 2
+          },
+          {
+            "name": "Page",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "maximum": 2147483647.0,
+              "minimum": 1.0,
+              "nullable": true
+            },
+            "x-position": 3
+          },
+          {
+            "name": "PageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "maximum": 2147483647.0,
+              "minimum": 1.0,
+              "nullable": true
+            },
+            "x-position": 4
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -203,7 +198,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/GenreDto"
+                    "$ref": "#/components/schemas/Genre"
                   }
                 }
               }
@@ -236,7 +231,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookDto"
+                  "$ref": "#/components/schemas/Book"
                 }
               }
             }
@@ -268,7 +263,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookDto"
+                  "$ref": "#/components/schemas/Book"
                 }
               }
             }
@@ -298,7 +293,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookDto"
+                  "$ref": "#/components/schemas/Book"
                 }
               }
             }
@@ -330,7 +325,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthorDto"
+                  "$ref": "#/components/schemas/Author"
                 }
               }
             }
@@ -362,7 +357,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthorDto"
+                  "$ref": "#/components/schemas/Author"
                 }
               }
             }
@@ -392,7 +387,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthorDto"
+                  "$ref": "#/components/schemas/Author"
                 }
               }
             }
@@ -424,7 +419,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenreDto"
+                  "$ref": "#/components/schemas/Genre"
                 }
               }
             }
@@ -454,7 +449,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenreDto"
+                  "$ref": "#/components/schemas/Genre"
                 }
               }
             }
@@ -486,7 +481,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenreDto"
+                  "$ref": "#/components/schemas/Genre"
                 }
               }
             }
@@ -575,217 +570,6 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/Book"
-            }
-          }
-        }
-      },
-      "GetAuthorsRequestDto": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/PaginatedRequestDto"
-          },
-          {
-            "type": "object",
-            "additionalProperties": false,
-            "properties": {
-              "ordering": {
-                "nullable": true,
-                "oneOf": [
-                  {
-                    "$ref": "#/components/schemas/AuthorOrderingOptions"
-                  }
-                ]
-              }
-            }
-          }
-        ]
-      },
-      "AuthorOrderingOptions": {
-        "type": "integer",
-        "description": "",
-        "x-enumNames": [
-          "Name",
-          "NameDescending",
-          "NumberOfBooksPublished"
-        ],
-        "enum": [
-          0,
-          1,
-          2
-        ]
-      },
-      "PaginatedRequestDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "skip": {
-            "type": "integer",
-            "format": "int32",
-            "maximum": 2147483647.0,
-            "minimum": 0.0
-          },
-          "take": {
-            "type": "integer",
-            "format": "int32",
-            "maximum": 100.0,
-            "minimum": 1.0
-          },
-          "sortBy": {
-            "type": "string",
-            "nullable": true
-          },
-          "sortAscending": {
-            "type": "boolean"
-          },
-          "filters": {
-            "type": "array",
-            "nullable": true,
-            "items": {
-              "$ref": "#/components/schemas/FilterDto"
-            }
-          }
-        }
-      },
-      "FilterDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "propertyName": {
-            "type": "string"
-          },
-          "operator": {
-            "$ref": "#/components/schemas/FilterOperator"
-          },
-          "value": {
-            "type": "string",
-            "nullable": true
-          }
-        }
-      },
-      "FilterOperator": {
-        "type": "integer",
-        "description": "",
-        "x-enumNames": [
-          "Equals",
-          "NotEquals",
-          "Contains",
-          "StartsWith",
-          "EndsWith",
-          "GreaterThan",
-          "LessThan",
-          "GreaterThanOrEqual",
-          "LessThanOrEqual"
-        ],
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8
-        ]
-      },
-      "GetAuthorsSieveRequestDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "filters": {
-            "type": "string",
-            "nullable": true
-          },
-          "sorts": {
-            "type": "string",
-            "nullable": true
-          },
-          "page": {
-            "type": "integer",
-            "format": "int32",
-            "maximum": 2147483647.0,
-            "minimum": 1.0,
-            "nullable": true
-          },
-          "pageSize": {
-            "type": "integer",
-            "format": "int32",
-            "maximum": 100.0,
-            "minimum": 1.0,
-            "nullable": true
-          }
-        }
-      },
-      "AuthorDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "bookIds": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }
-      },
-      "BookDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "title": {
-            "type": "string"
-          },
-          "pages": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "genreId": {
-            "type": "string",
-            "nullable": true
-          },
-          "authorsIds": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }
-      },
-      "GenreDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "books": {
-            "type": "array",
-            "items": {
-              "type": "string"
             }
           }
         }
